<resources>
    <string name="app_name">BabyCare</string>
    <string name="home">HOME</string>
    <string name="messages">NOTIFICATIONS</string>
    <string name="reservations">RESERVATIONS</string>
    <string name="payment">PAYMENTS</string>
    <string name="profile">PROFILE</string>
    <string name="money">MONEY ACCOUNT</string>
    <string name="policy">POLICY</string>
    <string name="logout">LOGOUT</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!--temporaneous hardcoding-->
    <string-array name="planets_array1">
        <item>Select District</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="planets_array">
        <item>Select Neighbourhood</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="month">
        <item>MM</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year">
        <item>YYYY</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>

</resources>

